Fixed vertical alignement

--- a/common.css
+++ b/common.css
@@ -369,6 +369,9 @@ footer {
     /* width: 100%; */
     min-height: 40vh;
     height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
